test/sql/function/numeric/test_invalid_math.test
# name: test/sql/function/numeric/test_invalid_math.test
# description: Test invalid input for math functions
# group: [numeric]

statement ok
PRAGMA enable_verification

# cannot take log of negative number or zero
statement error
SELECTl log(0);
----
Parser Error: syntax error at or near "SELECTl"
LINE 1: SELECTl log(0);
        ^

statement error
SELECTl log(-1);
----
Parser Error: syntax error at or near "SELECTl"
LINE 1: SELECTl log(-1);
        ^

statement error
SELECTl ln(0);
----
PLACEHOLDER_ERROR_MESSAGE2097

statement error
SELECTl ln(-1);
----
PLACEHOLDER_ERROR_MESSAGE2096

statement error
SELECTl log10(0);
----
PLACEHOLDER_ERROR_MESSAGE2095

statement error
SELECTl log10(-1);
----
PLACEHOLDER_ERROR_MESSAGE2094

# cannot take square root of a negative number
statement error
SELECTl sqrt(-1);
----
PLACEHOLDER_ERROR_MESSAGE2093

query I
SELECT SQRT(0)
----
0

query RRR
SELECT POW(1e300,100), POW(-1e300,100), POW(-1.0, 0.5)
----
inf	inf	nan

query RR
SELECT EXP(1e300), EXP(1e100)
----
inf	inf

query RRR
SELECT ACOS(3), ACOS(100), DEGREES(1e308)
----
nan	nan	inf
